--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1624,8 +1624,7 @@ output {
   display: block;
   width: 100%;
   height: 34px;
-  padding: 6px 12px;
-  font-size: 14px;
+  padding: 3px 6px;;
   line-height: 1.428571429;
   color: #555555;
   vertical-align: middle;
