Support for Multi-Select

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,9 @@ body {
   padding-top: 100px;
 }
 
+#aft-header-form{
+  display: none;
+}
 /* Custom container */
 .container-full {
   margin: 0 auto;
